[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "DeceptiveGym"
version = "1.0.0"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy",
]

[project.optional-dependencies]
all = [
  "numpy"
]


[tool.setuptools.packages.find]
where = ["."]

[tool.black]
line-length = 88
target-version = ['py313']